--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Stoicmaxims</h1>
+            <h1>Stoicmaxims.GitHub.io</h1>
             <h2></h2>
           </span>
           <span class="left-tail"></span>
@@ -45,37 +45,35 @@
 
 
       <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h2>
+<a id="help-build-a-stoic-maxims-directory" class="anchor" href="#help-build-a-stoic-maxims-directory" aria-hidden="true"><span class="octicon octicon-link"></span></a>Help Build A Stoic Maxims Directory.</h2>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>We're all on the lookup for quotes to meditate on. Let's gather the largest directory of them to together.
+Lets keep them as maxims, ie. short memorable snippets, distilled and byte sized.
+If you wish to add to it, submit a pull request, or send submissions in the below format to <strong><a href="mailto:stoicmaxims@outlook.com">stoicmaxims@outlook.com</a></strong> and I'll do my best to get them added.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<p><strong>format 1 per line</strong>:
+Quote[tab]Whom</p>
+
+<ul>
+<li><a href="https://github.com/stoicmaxims/stoicmaxims.github.io/blob/master/list.tsv">Pretty List</a></li>
+<li><a href="https://raw.githubusercontent.com/stoicmaxims/stoicmaxims.github.io/master/list.tsv">Raw List</a></li>
+<li><a href="https://stoicmaxims.github.io/list.tsv">Download</a></li>
+</ul>
+
+<h3>
+<a id="using-with-code" class="anchor" href="#using-with-code" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using With Code</h3>
+
+<p>More formats coming soon.</p>
+
+<h4>
+<a id="python" class="anchor" href="#python" aria-hidden="true"><span class="octicon octicon-link"></span></a>Python</h4>
+
+<pre><code>import csv
+
+with open("list.tsv") as tsv:
+    for line in csv.reader(tsv, delimiter="\t"): 
 </code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
 
       <footer>
