Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <a id="help-build-a-stoic-maxims-directory" class="anchor" href="#help-build-a-stoic-maxims-directory" aria-hidden="true"><span class="octicon octicon-link"></span></a>Help Build A Stoic Maxims Directory.</h2>
 
 <p>We're all on the lookout for quotes to meditate on. Let's gather the largest directory of them to together.
-Lets keep them as maxims, ie. short memorable snippets, distilled and byte sized.
+Lets keep them as maxims, ie. short memorable snippets, distilled and bite sized.
 If you wish to add to it, submit a pull request, or send submissions in the below format to <strong><a href="mailto:stoicmaxims@outlook.com">stoicmaxims@outlook.com</a></strong> and I'll do my best to get them added.</p>
 
 <p><strong>format 1 per line</strong>:
