--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         <h2>
 <a id="help-build-a-stoic-maxims-directory" class="anchor" href="#help-build-a-stoic-maxims-directory" aria-hidden="true"><span class="octicon octicon-link"></span></a>Help Build A Stoic Maxims Directory.</h2>
 
-<p>We're all on the lookout for quotes to meditate on. Let's gather the largest directory of them to together.
+<p>We're all on the lookout for maxims to meditate on. Let's gather the largest directory of them to together. That we can use in applications, personal references etc.
 Lets keep them as maxims, ie. short memorable snippets, distilled and bite sized.
 If you wish to add to it, submit a pull request, or send submissions in the below format to <strong><a href="mailto:stoicmaxims@outlook.com">stoicmaxims@outlook.com</a></strong> and I'll do my best to get them added.</p>
 
 <p><strong>format 1 per line</strong>:
-Quote[tab]Whom</p>
+Maxim[tab]Whom</p>
 
 <ul>
 <li><a href="https://github.com/stoicmaxims/stoicmaxims.github.io/blob/master/list.tsv">Pretty List</a></li>
@@ -64,15 +64,16 @@ Quote[tab]Whom</p>
 <h3>
 <a id="using-with-code" class="anchor" href="#using-with-code" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using With Code</h3>
 
-<p>More formats coming soon.</p>
+<p>More data formats coming soon.</p>
 
 <h4>
 <a id="python" class="anchor" href="#python" aria-hidden="true"><span class="octicon octicon-link"></span></a>Python</h4>
 
-<pre><code>import csv
-
-with open("list.tsv") as tsv:
-    for line in csv.reader(tsv, delimiter="\t"): 
+<pre><code>import csv, urllib2
+url = "https://raw.githubusercontent.com/stoicmaxims/stoicmaxims.github.io/master/list.tsv"
+response = urllib2.urlopen(url)
+for line in csv.reader(tsv, delimiter="\t"): 
+  print line
 </code></pre>
       </section>
 
