Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,50 +1,32 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
+    <meta name="description" content="Stoicmaxims.GitHub.io : ">
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Stoicmaxims.GitHub.io by stoicmaxims</title>
+    <title>Stoicmaxims.GitHub.io</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/stoicmaxims">View on GitHub</a>
-    <div class="shell">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Stoicmaxims.GitHub.io</h1>
-            <h2></h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/stoicmaxims">View on GitHub</a>
 
-      <div id="no-downloads">
-        <span class="inner">
-        </span>
-      </div>
+          <h1 id="project_title">Stoicmaxims.GitHub.io</h1>
+          <h2 id="project_tagline"></h2>
 
+        </header>
+    </div>
 
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h2>
 <a id="help-build-a-stoic-maxims-directory" class="anchor" href="#help-build-a-stoic-maxims-directory" aria-hidden="true"><span class="octicon octicon-link"></span></a>Help Build A Stoic Maxims Directory.</h2>
 
@@ -55,7 +37,7 @@ If you wish to add to it, submit a pull request, or send submissions in the belo
 <p>Currently they are in a <a href="https://support.google.com/docs/answer/63377?hl=en">tab delimited format</a> for simplicity</p>
 
 <p><strong>format 1 per line</strong>:
-ID  Maxim  Whom</p>
+ID [tab] Maxim [tab] Whom</p>
 
 <ul>
 <li><a href="https://github.com/stoicmaxims/stoicmaxims.github.io/blob/master/list.tsv">Pretty List</a></li>
@@ -92,21 +74,16 @@ foreach($lines as $maxim){
 }
 </code></pre>
       </section>
+    </div>
 
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>Projects by <a href="https://github.com/stoicmaxims">stoicmaxims</a> can be found on <a href="https://github.com/stoicmaxims">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
-
     </div>
 
     
+
   </body>
 </html>
