Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ If you wish to add to it, submit a pull request, or send submissions in the belo
 ID [tab] Maxim [tab] Whom</p>
 
 <ul>
-<li><a href="https://github.com/stoicmaxims/stoicmaxims.github.io/blob/master/list.tsv">Pretty List</a></li>
+<li><a href="https://github.com/stoicmaxims/stoicmaxims.github.io/blob/master/list.tsv">Pretty List (searchable)</a></li>
 <li><a href="https://raw.githubusercontent.com/stoicmaxims/stoicmaxims.github.io/master/list.tsv">Raw List</a></li>
 <li><a href="https://stoicmaxims.github.io/list.tsv">Download</a></li>
 </ul>
