Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h2>
 <a id="help-build-a-stoic-maxims-directory" class="anchor" href="#help-build-a-stoic-maxims-directory" aria-hidden="true"><span class="octicon octicon-link"></span></a>Help Build A Stoic Maxims Directory.</h2>
 
-<p>We're all on the lookout for maxims to meditate on. Let's gather the largest directory of them to together. A directory that we can use in applications, personal sites or anything else that can be dreamed up.
+<p>We're all on the lookout for maxims to meditate on. Let's gather the largest community directory of them together. A directory that we can use for contemplation, applications, personal sites or anything else that can be dreamed up.
 Lets keep them as maxims, ie. short memorable snippets, distilled and bite sized.
 If you wish to add to it, submit a pull request, or send submissions in the below format to <strong><a href="mailto:stoicmaxims@outlook.com">stoicmaxims@outlook.com</a></strong> and I'll do my best to get them added.</p>
 
@@ -72,7 +72,7 @@ ID [tab] Maxim [tab] Whom</p>
 <a id="python" class="anchor" href="#python" aria-hidden="true"><span class="octicon octicon-link"></span></a>Python</h4>
 
 <pre><code>import csv, urllib2
-url = "https://raw.githubusercontent.com/stoicmaxims/stoicmaxims.github.io/master/list.tsv.txt"
+url = "https://raw.githubusercontent.com/stoicmaxims/stoicmaxims.github.io/master/list.tsv"
 tsv = urllib2.urlopen(url)
 for line in csv.reader(tsv, delimiter="\t"): 
   print line
