--- a/push.html
+++ b/push.html
@@ -29,6 +29,7 @@
           Notification.requestPermission(function() {
             var notification = new Notification(title, {body:body} );
         });
+        var notification = new Notification(title, {body:body} );
       }
       
       notifyUser();
